--- a/2.6栈和队列的应用/2.栈在求值表达式的应用/3.中缀表达式转后缀表达式/中缀表达式转后缀表达式说明.md
+++ b/2.6栈和队列的应用/2.栈在求值表达式的应用/3.中缀表达式转后缀表达式/中缀表达式转后缀表达式说明.md
@@ -1,1 +1,17 @@
+# 中缀转后缀要点
+## 栈的实现使用了 C++ 的 `std::stack` 容器，并使用了 `unordered_map` 存储运算符的优先级。
+### 从这段代码实现了将中缀表达式转换为后缀表达式的功能。
+1. `infixToPostfix` 函数接受一个中缀表达式 `infix` 作为参数，返回一个字符串表示的后缀表达式。
+2. 使用一个整型变量 `i` 初始化为0，用于遍历中缀表达式。
+3. 在 `while` 循环中，从左到右遍历中缀表达式的每个字符。
+4. 如果当前字符是数字，将其添加到后缀表达式字符串 `postfix` 中，并添加一个空格分隔符以区分多位数字。
+5. 如果当前字符是左括号 `(`，将其入栈 `S`。
+6. 如果当前字符是右括号 `)`，从栈 `S` 中一直弹出元素并加入到后缀表达式字符串 `postfix` 中，直到遇到左括号 `(`，然后将左括号弹出栈。
+7. 如果当前字符是运算符（`+`、`-`、`*`、`/`），先判断栈 `S` 是否为空，然后一直比较栈顶运算符与当前字符的优先级，如果栈顶运算符优先级大于或等于当前字符的优先级，则将栈顶运算符弹出并加入到后缀表达式字符串 `postfix` 中，直到栈顶运算符优先级小于当前字符的优先级或栈为空。最后将当前字符入栈 `S`。
+8. 循环结束后，将栈 `S` 中剩余的运算符依次弹出并加入到后缀表达式字符串 `postfix` 中。
+9. 返回后缀表达式字符串 `postfix`。
+10. 在 `main` 函数中定义了一个中缀表达式的字符串 `infixExpression`。
+11. 调用 `infixToPostfix` 函数将中缀表达式转换为后缀表达式，并将结果赋给 `postfixExpression`。
+12. 输出转换后的后缀表达式。
 
+## 批注：该代码中假设中缀表达式中每个操作数和运算符之间没有空格分隔。
